[package]
name = "mastodon-report-watcher"
version = "0.1.0"
edition = "2021"
authors = ["Mubelotix <mubelotix@gmail.com>"]

[dependencies]
minreq = { version = "2.11", features = ["https"] }
serde_json = "1.0"
serde = { version="1.0", features = ["derive"] }
time = { version="0.3", features = ["serde", "parsing"] }
